<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyScorecardsActivity</string>
    <!-- My Scorecards  -->
    <string name="mysc_name">My Scorecards</string>
    <string name="action_new">New</string>
    <string name="action_remove">Delete</string>
    <string name="action_settings">Settings</string>

    <!-- New scorecard -->
    <string name="newsc_name">New Scorecard</string>
    <string name="team1_hint">Visiting Team</string>
    <string name="team2_hint">Home Team</string>
    <string name="ballpark_hint">Ball Park</string>
    <string name="date_hint">Game Date</string>
    <string name="btn_new_sc">Create</string>
</resources>
